--- a/WarrantyReport2_files/WarrantyReport2_toc.html
+++ b/WarrantyReport2_files/WarrantyReport2_toc.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=Windows-1252">
-<title>WarrantyReport
+<title>WarrantyReport2
 </title>
 <link href="LightBlue_Theme.css" type="text/css" rel="stylesheet">
 <base target="Doc_Frame">
